# jlcpcb-mapper

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml
docs/: index.html  styles.css
redesign/: ARCHITECTURE.md  COMMITS.md  DECISIONS.md  DEFERRED.md  NEXT_STEPS.md  README.md  RESUME.md  STATUS.md
src/jlcpcb_mapper/: candidates.py  cli.py  config.py  db_fetcher.py  default_config.yaml  footprint.py  grouper.py  kicad_fp.py  parts_db.py  preflight.py  project.py  report.py  resolver.py  review.py  schematic.py  select.py  values.py
tests/: conftest.py  test_candidates.py  test_cli.py  test_config.py  test_config_thresholds.py  test_db_fetcher.py  test_downloader.py  test_e2e.py  test_footprint.py  test_grouper.py  test_kicad_fp.py  test_llm.py  test_map_cmd.py  test_parts_db.py  test_parts_db_execute.py  test_pipeline_ceramic.py  test_pipeline_connector.py  test_pipeline_crystal.py  test_pipeline_ic.py  test_pipeline_inductor.py  test_pipeline_led.py  test_pipeline_llm_failures.py  test_pipeline_polarized.py  test_pipeline_resistor.py  test_preflight.py  test_preflight_coverage.py  test_project.py  test_report.py  test_report_fallback_counters.py  test_resolver.py  test_review.py  test_schematic.py  test_schematic_write.py  test_select.py  test_values.py  test_verify_cmd.py
tests/categories/: test_base.py  test_spec_cap.py  test_spec_connector.py  test_spec_crystal.py  test_spec_ic.py  test_spec_inductor.py  test_spec_led.py  test_spec_resistor.py
tests/commands/: test_map_cmd_new.py
tests/components/: test_candidate_sources_ceramic.py  test_candidate_sources_connector.py  test_candidate_sources_crystal.py  test_candidate_sources_ic.py  test_candidate_sources_inductor.py  test_candidate_sources_led.py  test_candidate_sources_polarized.py  test_candidate_sources_resistor.py  test_footprint_resolvers.py  test_matchers.py  test_package_extractors.py  test_prompt_hooks.py  test_prompt_hooks_generic.py  test_prompt_hooks_ic.py  test_scorers_generic.py  test_scorers_polarized.py  test_value_parsers_accept_lib_id.py  test_value_parsers_cap.py  test_value_parsers_connector.py  test_value_parsers_crystal.py  test_value_parsers_ic.py  test_value_parsers_inductor.py  test_value_parsers_led.py  test_value_parsers_resistor.py
tests/core/: test_manual.py  test_registry.py  test_registry_ordering.py  test_types_queryspec.py  test_types_value.py
tests/fixtures/: make_test_db.py  (+4 more)
(+47 files in other folders)
