[project]
name = "jlcpcb-mapper"
version = "0.1.1"
description = "LLM-assisted JLCPCB part mapping for KiCad schematics"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daekeun Kang", email = "dkkang@huconn.com" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]
keywords = ["kicad", "jlcpcb", "lcsc", "pcb", "eda", "schematic"]
dependencies = [
  "kiutils>=1.4.8",
  "pyyaml>=6.0",
  "click>=8.1",
  "rich>=13.7",
  "easyeda2kicad>=0.8",
  "split-file-reader>=0.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.urls]
Homepage = "https://hulryung.github.io/jlcpcb-mapper/"
Repository = "https://github.com/hulryung/jlcpcb-mapper"
Issues = "https://github.com/hulryung/jlcpcb-mapper/issues"

[project.scripts]
jlcpcb-mapper = "jlcpcb_mapper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jlcpcb_mapper"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/jlcpcb_mapper",
  "/tests",
  "/README.md",
  "/README.ko.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = ["live: hits real network/LLM (excluded by default)"]
